# armorcode-integration

./: .gitignore  Makefile  README.md  armorcode_client.py  example.env  example_filters.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_main.py
blueprints/: finding.json  vulnerability.json
src/armorcode_integration/: __init__.py  __main__.py
src/armorcode_integration/blueprints/: finding.json  product.json  subproduct.json
src/armorcode_integration/cli/: __init__.py  cli_controller.py
src/armorcode_integration/clients/: __init__.py  armorcode_client.py
src/armorcode_integration/core/: __init__.py  main.py  step_executor.py
src/armorcode_integration/managers/: __init__.py  bulk_port_manager.py  filter_manager.py  logging_manager.py  progress_tracker.py  recovery_manager.py  resource_manager.py  retry_manager.py
src/armorcode_integration/utils/: __init__.py  batch_accumulator.py  data_transformers.py  error_handler.py  error_reporter.py  fix_retry_mechanism.py
tests/: __init__.py
tests/integration/: __init__.py  test_bulk_port_manager_integration.py  test_enhanced_findings_filtering.py  test_enhanced_product_ingestion.py  test_enhanced_subproduct_ingestion.py  test_filtering_integration.py  test_integration.py  test_main_integration.py  test_parallel_findings_processing.py
tests/unit/: __init__.py  test_batch_accumulator.py  test_bulk_port_manager.py  test_cli_controller.py  test_data_transformers.py  test_filter_manager.py  test_main.py  test_retry_manager.py  test_step_executor.py
